--- a/wayclip_gui/src/styles/globals.css
+++ b/wayclip_gui/src/styles/globals.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import 'tailwindcss';
 
 body {
-    @apply font-[Jost] bg-zinc-800 text-zinc-200;
+    @apply font-[Inter] bg-[#202124] text-zinc-200;
 }
 
 @theme {
